remove bat PermSize